<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">UpkeepXP</string>
    <string name="et_email">Insira seu e-mail</string>
    <string name="et_password">Insira sua senha</string>
    <string name="bt_logar">Logar</string>
    <string name="tv_forgotpass">Esqueceu a senha?</string>
    <string name="connection_failed">Não há conexão com a Internet</string>
    <string name="campo_vazio">Nenhum campo pode estar vazio!</string>
    <string name="userPass_failed">Usuário ou Senha inválidos!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="user_name">Nome do Usuário</string>
    <string name="user_mail">user@upkeepxp.com</string>
    <string name="nav_agenda_atividades">Agenda de Atividades</string>
    <string name="nav_registro_chamados">Registro de Chamados</string>
    <string name="nav_contatos">Contatos</string>
    <string name="nav_equipes">Equipes</string>
    <string name="nav_membros">Membros</string>
    <string name="nav_sobre">Sobre o Upkeep XP</string>
    <string name="nav_helpus">Ajuda e FeedBack</string>
    <string name="saudacoes">Seja Bem Vindo ao Upkeep XP</string>
    <string name="bt_salvar">Salvar</string>
    <string name="act_bar_tirarFoto">Selecionar ou Tirar Foto</string>
    <string name="senha">Nova Senha</string>
    <string name="confirm_senha">Confirmar Senha</string>
    <string name="recuperar_senha">Recuperar Senha</string>
    <string name="date_picker_title">Data de Nascimento:</string>
    <string name="txt_email">Email</string>
    <string name="txt_Nome">Nome</string>
    <string name="txt_Sobrenome">Sobrenome</string>
    <string name="txt_Nascimento">Nascimento</string>
    <string name="txt_Sexo">Sexo</string>
    <string name="txt_M">M</string>
    <string name="txt_F">F</string>
    <string name="txt_Telefone">Telefone</string>
    <string name="txt_Especialidade">Especialidade</string>
    <string name="txt_CEP">CEP</string>
    <string name="txt_Número">Número</string>
    <string name="txt_UF">UF</string>
    <string name="txt_Funcao">Função</string>
    <string name="et_nome_equipe">Nome da Equipe</string>
    <string name="et_nome_atividade">Nome da Atividade</string>
    <string name="et_local">Local</string>
    <string name="et_descrição">Descrição</string>
    <string name="bt_limpar">Limpar</string>
    <string name="email_incorreto">Formato de e-mail incorreto!</string>
    <string name="app_about">Upkeep Xp é um app para gestão da manutenção, desenvolvido pelo UpKeepXp Team para as disciplinas de Fundamento de Engenharia de Software<br />
    e Modelagem e Programação Orientada a Objetos do curso de Bacharelado em sistemas de Informação da Universidade Federal Rural de Pernambuco</string>
    <string name="confirmar">CONFIRMAR</string>
    <string name="perfil_content_description">Campo reservado para foto de perfil</string>
    <string name="contentDescription_logo">Logotipo da Aplicação</string>
    <string name="contentDescription_perfil">Campo reservado para foto de perfil</string>
    <string name="contentDescription_checkBox">checkBox</string>
    <string name="exemplo_telefone">9999–9999</string>
    <string name="exemplo_horario">00:00:00</string>
    <string name="exemplo_cep">55555–555</string>
    <string name="equipe_nome">Nome da Equipe</string>
    <string name="btn_excluir">Excluir</string>
    <string name="usuario_nome">Nome de Usuário</string>
    <string name="nome_proprio">%1$s %2$s</string>
    <string name="codigo">Codigo</string>
    <string name="tipo">Tipo</string>
    <string name="defeito">Defeito</string>
    <string name="equipamento">Equipamento</string>
    <string name="modelo">Modelo</string>
    <string name="descricao">Descrição</string>
    <string name="salvo">Salvo com Sucesso!</string>
    <string name="title_activity_buscar_equip">Buscar Equipamentos</string>
    <string name="deseja_Del">Deseja Apagar?</string>
    <string name="delete_title">Excluir Registro:</string>
    <string name="sim">Sim</string>
    <string name="delete_sucess">Excluído com sucesso!</string>
    <string name="cancel">Cancela</string>
    <string name="edit_sucess">Editado com sucesso!</string>
    <string name="falha">Falha</string>
    <string name="editar">Editar</string>
    <string name="buscar">Pequisar</string>
    <string name="exemplo_data">01/01/1950</string>
    <string name="nome_da_equipe">Nome da Equipe</string>
    <string name="cadastrar_equipamento">Cadastrar Equipamento</string>
    <string name="edit_fail">Falha ao editar!</string>
    <string name="title_activity_cadastrar_equipamento">Cadastrar Equipamento</string>
    <string name="tv_fabricante">Fabricante</string>
    <string name="status">Status</string>
    <string name="nav_disponibilidade">Disponibilidade</string>
    <string name="altura">Altura em cm</string>
    <string name="peso">Peso em Kg</string>
    <string name="nome_de_unicornio">Nome do Unicórnio</string>
    <string name="cadastrar_unicornio">Cadastrar Unicórnio</string>
    <string name="unicorn_crud">Unicórnios</string>
    <string name="txt_editar">Editar</string>
    <string name="disponibilidade">Disponibilidade</string>
    <string name="btn_calcular">CALCULAR</string>
    <string name="txt_disponibilidade">DISPONIBILIDADE:</string>
    <string name="equipamento_atual">Equipamento Atual</string>
    <string name="proximo_equipamento">Próximo Equipamento</string>
    <string name="associacao">Associação</string>
    <string name="btn_editar">Editar</string>
    <string name="Equipes_title">Equipes</string>
    <string-array name="ligacao">
        <item>Série</item>
        <item>Paralelo</item>
    </string-array>
</resources>
