<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/txt_email"
        android:theme="@style/UpkeepEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:theme="@style/UpkeepEditText"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTextView" />

    <TextView
        android:id="@+id/nomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/txt_Nome"
        android:theme="@style/UpkeepEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText" />

    <TextView
        android:id="@+id/sobrenomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/txt_Sobrenome"
        android:theme="@style/UpkeepEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.43"
        app:layout_constraintStart_toEndOf="@+id/nomeTextView"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText" />

    <EditText
        android:id="@+id/nomeEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:theme="@style/UpkeepEditText"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/sobrenomeTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nomeTextView" />

    <EditText
        android:id="@+id/sobrenomeEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:theme="@style/UpkeepEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nomeEditText"
        app:layout_constraintTop_toBottomOf="@+id/sobrenomeTextView" />

    <TextView
        android:id="@+id/nascimentoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/txt_Nascimento"
        android:theme="@style/UpkeepEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nomeEditText" />

    <TextView
        android:id="@+id/sexoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/txt_Sexo"
        android:theme="@style/UpkeepEditText"
        app:layout_constraintStart_toEndOf="@+id/nascimentoEditText"
        app:layout_constraintTop_toBottomOf="@+id/sobrenomeEditText" />

    <EditText
        android:id="@+id/nascimentoEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:focusable="false"
        android:inputType="none|date"
        android:theme="@style/UpkeepEditText"
        app:layout_constraintEnd_toStartOf="@+id/sexoRadioGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nascimentoTextView" />

    <RadioGroup
        android:id="@+id/sexoRadioGroup"
        android:layout_width="145dp"
        android:layout_height="37dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        android:theme="@style/UpkeepEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sexoTextView">

        <RadioButton
            android:id="@+id/mascRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/textColorPrimary"
            android:text="@string/txt_M" />

        <RadioButton
            android:id="@+id/femRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/textColorPrimary"
            android:text="@string/txt_F" />

    </RadioGroup>

    <TextView
        android:id="@+id/foneTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/txt_Telefone"
        android:theme="@style/UpkeepEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nascimentoEditText" />

    <TextView
        android:id="@+id/especialidadeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/txt_Especialidade"
        android:theme="@style/UpkeepEditText"
        app:layout_constraintStart_toEndOf="@+id/foneEditText"
        app:layout_constraintTop_toBottomOf="@+id/nascimentoEditText" />

    <EditText
        android:id="@+id/foneEditText"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="phone"
        android:theme="@style/UpkeepEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/foneTextView" />

    <EditText
        android:id="@+id/especialidadeEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="text"
        android:theme="@style/UpkeepEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/foneEditText"
        app:layout_constraintTop_toBottomOf="@+id/especialidadeTextView" />

    <TextView
        android:id="@+id/cepTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/txt_CEP"
        android:theme="@style/UpkeepEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/especialidadeEditText" />

    <TextView
        android:id="@+id/numeroTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/txt_Número"
        android:theme="@style/UpkeepEditText"
        app:layout_constraintStart_toEndOf="@+id/cepEditText"
        app:layout_constraintTop_toBottomOf="@+id/especialidadeEditText" />

    <TextView
        android:id="@+id/ufTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/txt_UF"
        android:theme="@style/UpkeepEditText"
        app:layout_constraintStart_toEndOf="@+id/numeroEditText"
        app:layout_constraintTop_toBottomOf="@+id/especialidadeEditText" />

    <EditText
        android:id="@+id/cepEditText"
        android:layout_width="158dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPostalAddress"
        android:theme="@style/UpkeepEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cepTextView" />

    <EditText
        android:id="@+id/numeroEditText"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        android:theme="@style/UpkeepEditText"
        app:layout_constraintStart_toEndOf="@+id/cepEditText"
        app:layout_constraintTop_toBottomOf="@+id/numeroTextView" />

    <Spinner
        android:id="@+id/ufSpinner"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:entries="@array/UF"
        android:theme="@style/UpkeepEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/numeroEditText"
        app:layout_constraintTop_toBottomOf="@+id/ufTextView" />

    <TextView
        android:id="@+id/funcaoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/txt_Funcao"
        android:theme="@style/UpkeepEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cepEditText" />

    <Spinner
        android:id="@+id/funcaoSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:entries="@array/funcao"
        android:theme="@style/UpkeepEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/funcaoTextView" />

    <Button
        android:id="@+id/confirmarButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/bt_salvar"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/funcaoSpinner" />
 </android.support.constraint.ConstraintLayout>
