<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_equipamentolist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/equipamento"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.SearchResult.Title"
            android:textColor="@color/textColorPrimary"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_codigolist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10sp"
                android:text="@string/codigo"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@color/textColorPrimary" />

            <TextView
                android:id="@+id/txt_defeitolist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/defeito"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.SearchResult.Subtitle"
                android:textColor="@color/textColorPrimary" />

        </LinearLayout>

        <TextView
            android:id="@+id/txt_statuslist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="@color/textColorPrimary" />

    </LinearLayout>



</android.support.constraint.ConstraintLayout>